# njit-dbms-final

./: .envrc  .gitignore  DDL.sql  README.md  first-run.ps1  first-run.sh  import-db.sh  pyproject.toml  requirements.txt  run_postgres.ps1  run_postgres.sh  setEnv.ps1
.github/workflows/: django.yml
data/: 000-users.sql  001-hotel.sql  002-room.sql  003-creditcard.sql  004-breakfast.sql  005-service.sql  006-discounted_room.sql  007-reservation.sql  008-room_reservation.sql  010-room_review.sql  011-breakfast_review.sql  012-service_review.sql  020-rresv_breakfast.sql  021-rresv_service.sql  database.ddl
hotelapp/hotelapp/: settings.py  urls.py
hotelapp/reservations/: admin.py  apps.py  fields.py  forms.py  models.py  urls.py  views.py
hotelapp/reservations/migrations/: 0001_initial.py  0002_auto_20201110_1941.py  0002_auto_20201127_1828.py
hotelapp/reservations/templates/: add_reviews.html  bookhotel.html  bookings.html  home.html  resbase.html  review_list.html  search.html  statistics.html
hotelapp/reviews/: forms.py  urls.py  views.py
hotelapp/reviews/templates/: add_reviews.html  revbase.html  review_list.html
hotelapp/templates/: base.html  bookhotel.html  home.html
hotelapp/users/: README.md  admin.py  forms.py  models.py  views.py
hotelapp/users/migrations/: 0001_initial.py  0001_squashed_0001_initial.py  0002_auto_20201110_1928.py
